# 3d-chess

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  screen.tga  shadow-screen.tga  shadow_map_0.tga  shadow_map_1.tga  shadow_map_2.tga  shadow_map_3.tga
data/: data.json
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
glp/: .passthrough.fs.swo  passthrough.fs  passthrough.vs
glsl/: model-view-proj.vs  per-frag-blinn-phong.fs  shadow-map.fs  shadow-map.vs
include/: Data.h  Light.h  Model.h  Orientation.h  Scene.h  ShaderProg.h  Texture.h  bind_shaders.h  bind_tex.h  bind_vao.h  helpers.h  lib.hpp  load_obj.h  load_shader_prog.h  mat.hpp  read_fbo_pixels.h  transformation_matrices.h  types.hpp  types_decl.h
include/_v1/: bind_tex_fbo.h  load_tex.h
src/: Data.cpp  Light.cpp  Model.cpp  Orientation.cpp  Scene.cpp  ShadowMap.cpp  Texture.cpp  bind.cpp  load_obj.cpp  mat.cpp  screen.cpp
